test/expected/limited_trust/1.straight/exposing/svcexposition.yaml
apiVersion: mm.ibm.istio.io/v1
kind: ServiceExposition
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"mm.ibm.istio.io/v1","kind":"ServiceExposition","metadata":{"annotations":{},"name":"helloworld","namespace":"default"},"spec":{"mesh_fed_config_selector":{"fed-config":"limited-trust"},"name":"helloworld","port":5000}}
  creationTimestamp: "2020-03-03T02:40:33Z"
  finalizers:
  - mm.ibm.istio.io
  generation: 3
  name: helloworld
  namespace: default
  resourceVersion: "70138346"
  selfLink: /apis/mm.ibm.istio.io/v1/namespaces/default/serviceexpositions/helloworld
  uid: 5ad94ed2-5cf8-11ea-a10a-220468925d79
spec:
  endpoints:
  - 169.62.214.229:15443
  mesh_fed_config_selector:
    fed-config: limited-trust
  name: helloworld
  port: 5000
status:
  ready: true
