test/expected/limited_trust/1.straight/exposing/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: "2020-03-03T02:40:33Z"
  generation: 1
  name: helloworld
  namespace: limited-trust
  ownerReferences:
  - apiVersion: mm.ibm.istio.io/v1
    kind: ServiceExposition
    name: helloworld
    uid: 5ad94ed2-5cf8-11ea-a10a-220468925d79
  resourceVersion: "70138345"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/limited-trust/virtualservices/helloworld
  uid: 5b033b11-5cf8-11ea-a10a-220468925d79
spec:
  gateways:
  - helloworld
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /default/helloworld/
    name: route-helloworld
    rewrite:
      authority: helloworld.default.svc.cluster.local
      uri: /
    route:
    - destination:
        host: helloworld.default.svc.cluster.local
        port:
          number: 5000
